--- a/NetCoreSeguridadPersonalizada/Views/Shared/_Layout.cshtml
+++ b/NetCoreSeguridadPersonalizada/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                         </li>
                     </ul>
                 </div>
+                <partial name="_MenuLogin" />
             </div>
         </nav>
     </header>
